# lego-duck-race

./: .gitignore  README.md  arcade_controller.py  controller.py  controller_base.py  controller_test.py  demo.py  ducklane.py  game.py  measurement_logger.py  motor.py  motor_interface.py  peripherals.py  pyproject.toml  requirements.txt  ruff.toml  sensor.py  sensor_interface.py  sensor_test.py  sound_demo.py  windowed_list.py
.github/workflows/: build-and-test.yaml
controller-test/: controller.py
demos/: led_test.py
lights-test/: lights.py
src/lego_duck_race/: __init__.py  demo.py  ducklane.py  game.py
src/lego_duck_race/ascii/: __init__.py  graphics.py
src/lego_duck_race/assets/: duck.txt  loader.py  wave.txt
src/lego_duck_race/config/: __init__.py  lanes.yaml  settings.py
src/lego_duck_race/hardware/: buildhat_motor.py  factory.py  hid_controller.py  limit_switch.py
src/lego_duck_race/interfaces/: arcade_controller.py  controller_base.py  limit_switch.py  motor.py  motor_interface.py  sensor.py
src/lego_duck_race/sim/: fakes.py
src/lego_duck_race/utils/: measurement_logger.py  windowed_list.py
tests/: game_test.py
tests/interfaces/: controller_test.py  sensor_test.py
tests/utils/: measurement_logger_test.py
