[project]
name = "lego-duck-race"
version = "0.1.0"
description = "Interface code for Brickworld 2025 Lego Duck Race Project"
readme = "README.md"
authors = [
    { name = "John Myrda", email = "hello@johnmyrda.com" }
]
requires-python = ">=3.14"
dependencies = [
    "asciimatics>=1.15.0",
    "textual>=6.5.0",
]

[optional-dependencies]
interfaces = [
    "adafruit-circuitpython-neopixel==6.3.18",
    "buildhat==0.9.0",
    "gpiozero==2.0.1",
    "hidapi==0.14.0.post4",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

[project.scripts]
game = "lego_duck_race.game:main"
demo = "lego_duck_race.demo:main"
ascii = "lego_duck_race.ascii:main"


[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
