[project]
name = "lego-duck-race"
version = "0.1.0"
description = "Interface code for Brickworld 2025 Lego Duck Race Project"
readme = "README.md"
authors = [
    { name = "John Myrda", email = "hello@johnmyrda.com" }
]
requires-python = ">=3.14"
dependencies = [
    "asciimatics>=1.15.0",
    "pydantic>=2.12.5",
    "pydantic-settings[yaml]>=2.14.2",
    "ruff>=0.15.17",
    "textual>=8.2.8",
]

[project.optional-dependencies]
hardware = [
    "adafruit-circuitpython-neopixel==6.4.2",
    "buildhat==0.9.0",
    "gpiozero==2.0.1",
    "hidapi==0.15.0",
    "RPi.GPIO>=0.7.1",
    "rpi-lgpio>=0.6",
    "rpi-ws281x>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.55",
]

[project.scripts]
game = "lego_duck_race.game:main"
ascii = "lego_duck_race.ascii:main"
controller_test = "lego_duck_race.hardware.hid_controller:diagnose_controller"
motor_test = "lego_duck_race.hardware.buildhat_motor:diagnose_motors"
switch_test = "lego_duck_race.hardware.limit_switch:diagnose_limit_switches"
hardware_test = "lego_duck_race.hardware.factory:diagnose_all"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]

[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"
